--- a/EngFundamentals/slides/video0.tex
+++ b/EngFundamentals/slides/video0.tex
@@ -198,7 +198,7 @@
   \end{itemize} 
   \item Optimization in Vector Spaces
   \begin{itemize}
-	  \item Practical applications duality bounds in convex optimization
+	  \item Practical applications include duality bounds in convex optimization
   \end{itemize} 
 \end{itemize}
 
@@ -446,7 +446,7 @@
   \setlength\itemsep{2mm}
   \item \textcolor{blue}{Watch the flip video first and then read the matching course notes}
   \item Afterward, try the homework while referring to the course notes as needed
-  \item If you're stuck $>\!30$min on a question, ask for a hint (via piazza or e-mail)
+  \item If you're stuck $>\!30$min on a question, ask for a hint (via e-mail or web)
   \item Visit office hours to get additional help as needed
   \item \textcolor{red}{Make sure to watch the video before the class meeting!}
 \end{itemize}
