--- a/EngFundamentals/slides/video7.tex
+++ b/EngFundamentals/slides/video7.tex
@@ -143,7 +143,7 @@
 			\setlength\itemsep{3mm}
 			\color{red}
 			\item Welcome to the seventh video lecture for ECE 586, Vector Space Methods. \\[2mm]
-			Today, we'll discuss the idea of compactness and its applications.
+			Today, we'll discuss the ideas of completeness and contraction.
 		\end{enumerate}
 	}
 \end{frame}
