--- a/EngFundamentals/slides/video4.tex
+++ b/EngFundamentals/slides/video4.tex
@@ -250,14 +250,14 @@ The \textcolor{blue}{value} of $f$ at $x\in X$, \textcolor{blue}{denoted $f(x)$}
   \item<2-> Function $f \colon X\rightarrow Y$ assigns one value $f(x)\in Y$ to each $x\in X$
   \item<3-> Notation \textcolor{blue}{$f \colon X \rightarrow Y$} emphasizes the \textcolor{blue}{domain} $X$ and the \textcolor{blue}{codomain} $Y$
   \item<4-> \textcolor{blue}{Range} of $f$ is subset of $Y$ achieved by $f$, $\{y \in Y \,|\, \exists x\in X, y=f(x) \}$
-  \item<5-> Since term codomain is uncommon, people sometimes use the term range instead of codomain either intentionally or unintentionally
+  \item<5-> Since the term codomain is uncommon, people sometimes use the term range instead of codomain either intentionally or unintentionally
 \end{itemize}
 
 \item<6-> In basic math, functions are often described by graphs and formulas \vspace{1mm}
 \begin{itemize} 
   \setlength\itemsep{1.5mm}
   \item<6-> This leads students to picture only ``nice'' functions
-  \item<7-> Ex. Cauchy published \textcolor{blue}{incorrect proof of false assertion}: ``a sequence of continuous functions converging everywhere has a continuous limit''
+  \item<7-> Ex. Cauchy published \textcolor{blue}{incorrect proof of the false assertion}: ``a sequence of continuous functions converging everywhere has a continuous limit''
   %\item Teachers now warn: \textcolor{blue}{the world is filled with ``not so nice'' functions}
 \end{itemize}
 
@@ -339,8 +339,8 @@ The \textcolor{blue}{inverse image} or \textcolor{blue}{preimage} of a subset $C
 
 \begin{itemize}
   \setlength\itemsep{1.25mm}
-  \item<3-> Allowing set-valued images means \textcolor{blue}{set-valued inverse always exists}
-  \item<4-> For a one-to-one $f$, the inverse image of singleton $\{ f(x) \}$ is singleton: \vspace{-0.5mm}
+  \item<3-> Allowing set-valued images means the \textcolor{blue}{set-valued inverse always exists}
+  \item<4-> For a one-to-one $f$, the inverse image of a singleton $\{ f(x) \}$ is a singleton:$\!\!\!\!$\vspace{-0.5mm}
   \[ f^{-1}( \{f(x) \}) = \{x\} \]
   %\item<5-> In general, one can show: $f(f^{-1}(B)) \subseteq B$ and $f^{-1}(f(A)) \supseteq A$.
   %\item<6-> Ex. For $f \colon \mathbb{R} \rightarrow \mathbb{R}$ defined by $f(x)=x^2$, let $A=[1,2]$ and notice that $B = f(A) = [1,4]$.  But, $f^{-1}(B) = [-2,-1] \cup [1,2] \supseteq A$
